--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,8 @@ services:
       context: ../funding-service-design-fund-store
     ports: 
       - 3001:8080
+  form-runner:
+    build: 
+      context: ../funding-service-design-frontend
+    ports: 
+      - 3009:3009
