--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   fund-store:
     build: 
       context: ../funding-service-design-fund-store
+    command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
+    environment:
+      - FLASK_ENV=development
     ports: 
       - 3001:8080
   form-runner:
