--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - FLASK_ENV=development
     ports: 
       - 3002:8080
+    volumes: ['../funding-service-design-fund-store:/app']
   account-store:
       build: 
         context: ../funding-service-design-account-store
