--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
         - ACCOUNT_STORE_API_HOST=http://account-store:8080
         - AUTHENTICATOR_HOST=http://localhost:3004
         - NOTIFICATION_SERVICE_HOST=http://notification:8080
-        - APPLICANT_FRONTEND_HOST=https://www.example.com
+        - APPLICANT_FRONTEND_HOST=http://localhost:3008
   assessment-store:
       build: 
         context: ../funding-service-design-assessment-store
@@ -81,6 +81,8 @@ services:
       - USE_LOCAL_DATA=False
       - APPLICATION_STORE_API_HOST=http://application-store:8080
       - FORMS_SERVICE_PUBLIC_HOST=http://localhost:3009
+    ports:
+      - 3008:8080
   form-runner:
     build: 
       context: ../funding-service-design-frontend
