--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,13 @@ services:
       build: 
         context: ../funding-service-design-assessment-store
       volumes: ['../funding-service-design-assessment-store:/app']
+      command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
       ports: 
         - 3005:8080
+      environment:
+              - DATABASE_URL=postgresql://postgres:password@assessment-store-data:5432
+      depends_on: 
+        - assessment-store-data
   notification:
       build: 
         context: ../funding-service-design-notification
@@ -96,3 +101,10 @@ services:
     image: redis
     ports:
       - 6379:6379
+  assessment-store-data:
+      image: postgres
+      restart: always
+      environment:
+        - POSTGRES_PASSWORD=password
+      ports:
+        - 5432:5432
