--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@ services:
       - APPLICATION_STORE_API_HOST=http://application-store:8080
       - FORMS_SERVICE_PUBLIC_HOST=http://localhost:3009
       - FORMS_SERVICE_PRIVATE_HOST=http://form-runner:3009
+      - AUTHENTICATOR_HOST=http://localhost:3004
+      - FLASK_ENV=development
     ports:
       - 3008:8080
   form-runner:
