--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,3 +110,18 @@ services:
         - POSTGRES_PASSWORD=password
       ports:
         - 5432:5432
+  assessment:
+    build: 
+      context: ../funding-service-design-assessment
+    volumes: ['../funding-service-design-assessment:/app']
+    command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
+    depends_on:
+      - assessment-store
+    environment:
+      - FLASK_ENV=development
+      - ASSESSMENT_STORE_API_HOST=localhost:3005
+      - FUND_STORE_API_HOST=http://fund-store:8080
+      - APPLICATION_STORE_API_HOST=application_store #http://application-store:8080
+      # Connect this to the real stores when assessment app updated to use them
+    ports: 
+      - 3010:8080
