--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,10 @@ services:
       build: 
         context: ../funding-service-design-authenticator
       volumes: ['../funding-service-design-authenticator:/app']
+      command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 8080"]
       ports: 
         - 3004:8080
+        - 5678:5678
       depends_on:
         - authenticator-data
         - account-store
