--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
     environment:
       - FLASK_ENV=development
+      - FUND_STORE_API_HOST=http://fund-store:8080
+      - ACCOUNT_STORE_API_HOST=http://account-store:8080
+      - NOTIFICATION_SERVICE_HOST=http://notification-store:8080
     ports: 
       - 3002:8080
     volumes: ['../funding-service-design-application-store:/app']
@@ -92,6 +95,7 @@ services:
       - FORMS_SERVICE_PUBLIC_HOST=http://localhost:3009
       - FORMS_SERVICE_PRIVATE_HOST=http://form-runner:3009
       - AUTHENTICATOR_HOST=http://localhost:3004
+      - FUND_STORE_API_HOST=http://fund-store:8080
       - FLASK_ENV=development
     ports:
       - 3008:8080
