application store has an incorrect notification service ref (#10)
The application store could not reach the notification container due to an incorrect ref.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     environment:
       - FLASK_ENV=development
       - FUND_STORE_API_HOST=http://fund-store:8080
-      - ACCOUNT_STORE_API_HOST=http://account-store:8080
-      - NOTIFICATION_SERVICE_HOST=http://notification-store:8080
       - DATABASE_URL=postgresql://postgres:password@database:5432/application_store
+      - ACCOUNT_STORE_API_HOST=http://account-store:8080
+      - NOTIFICATION_SERVICE_HOST=http://notification:8080
     ports: 
       - 3002:8080
     depends_on:
@@ -67,7 +67,7 @@ services:
       build: 
         context: ../funding-service-design-notification
       volumes: ['../funding-service-design-notification:/app']
-      ports: 
+      ports:
         - 3006:8080
       environment:
         GOV_NOTIFY_API_KEY: ${GOV_NOTIFY_API_KEY:?err}
