--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,9 @@ services:
   form-runner:
     build: 
       context: ../funding-service-design-frontend
+      args:
+        # To use branch of digital-form-builder change 'latest' to an alternative tag from https://github.com/communitiesuk/digital-form-builder/pkgs/container/digital-form-builder-dluhc-runner/versions and run 'docker compose build form-runner'
+        - BASE_IMAGE_TAG=latest
     ports: 
       - 3009:3009
     environment:
