--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,9 +146,8 @@ services:
       - assessment-store
     environment:
       - FLASK_ENV=development
-      - ASSESSMENT_STORE_API_HOST=localhost:3005
       - FUND_STORE_API_HOST=http://fund-store:8080
-      - APPLICATION_STORE_API_HOST=application_store #http://application-store:8080
-      # Connect this to the real stores when assessment app updated to use them
+      - APPLICATION_STORE_API_HOST=http://application-store:8080
+      - ASSESSMENT_STORE_API_HOST=http://assessment-store:8080
     ports: 
       - 3010:8080
