add option for file uploads in form-runner using AWS credentials

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-# RENAME TO .env AND POPULATE
+# COPY TO .env AND ASK TEAM MEMBER FOR VALUES
 GOV_NOTIFY_API_KEY=
+# OPTIONAL VALUES FOR TESTING FILE UPLOADS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
