--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,5 +153,6 @@ services:
       - FUND_STORE_API_HOST=http://fund-store:8080
       - APPLICATION_STORE_API_HOST=http://application-store:8080
       - ASSESSMENT_STORE_API_HOST=http://assessment-store:8080
+      - ACCOUNT_STORE_API_HOST=http://account-store:8080
     ports: 
       - 3010:8080
