BAU - docs and config for debugging in vs code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   application-store:
     build: 
       context: ../funding-service-design-application-store
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
+    command: ["sh", "-c", "flask db upgrade && pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
     environment:
       - FLASK_ENV=development
       - FUND_STORE_API_HOST=http://fund-store:8080
@@ -21,20 +21,21 @@ services:
       - NOTIFICATION_SERVICE_HOST=http://notification:8080
     ports: 
       - 3002:8080
-      - 5683:5678
+      - 5682:5678
     depends_on:
       - database
     volumes: ['../funding-service-design-application-store:/app']
   account-store:
       build: 
         context: ../funding-service-design-account-store
-      command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+      command: ["sh", "-c", "flask db upgrade && pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
       environment:
         - FLASK_ENV=development
         - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
       volumes: ['../funding-service-design-account-store:/app']
       ports: 
         - 3003:8080
+        - 5683:5678
       depends_on:
         - database
   authenticator:
@@ -67,9 +68,10 @@ services:
       build: 
         context: ../funding-service-design-assessment-store
       volumes: ['../funding-service-design-assessment-store:/app']
-      command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+      command: ["sh", "-c", "flask db upgrade && pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
       ports: 
         - 3005:8080
+        - 5685:5678
       environment:
         - DATABASE_URL=postgresql://postgres:password@database:5432/assessment_store
         - APPLICATION_STORE_API_HOST=http://application-store:8080
@@ -79,8 +81,10 @@ services:
       build: 
         context: ../funding-service-design-notification
       volumes: ['../funding-service-design-notification:/app']
+      command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
       ports:
         - 3006:8080
+        - 5686:5678
       environment:
         GOV_NOTIFY_API_KEY: ${GOV_NOTIFY_API_KEY:?err}
   frontend:
@@ -106,7 +110,7 @@ services:
       - REDIS_INSTANCE_URI=redis://redis-data:6379
     ports:
       - 3008:8080
-      - 5688:5678
+      - 5687:5678
   form-runner:
     build: 
       context: ../digital-form-builder
@@ -146,7 +150,7 @@ services:
     build: 
       context: ../funding-service-design-assessment
     volumes: ['../funding-service-design-assessment:/app']
-    command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
+    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
     depends_on:
       - assessment-store
       - fund-store
@@ -166,3 +170,4 @@ services:
       # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
     ports: 
       - 3010:8080
+      - 5688:5678
