added changes need for fund-db support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
     environment:
       - FLASK_ENV=development
+      - DATABASE_URL=postgresql://postgres:password@database:5432/fund_store
     ports: 
       - 3001:8080
+    depends_on: 
+    - database
     volumes: ['../funding-service-design-fund-store:/app']
   application-store:
     build: 
@@ -133,7 +136,7 @@ services:
       restart: always
       environment:
         - POSTGRES_PASSWORD=password
-        - POSTGRES_MULTIPLE_DATABASES=assessment_store,account_store,application_store
+        - POSTGRES_MULTIPLE_DATABASES=assessment_store,account_store,application_store,fund_store
       ports:
         - 5432:5432
   assessment:
