--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,20 @@ services:
   fund-store:
     build: 
       context: ../funding-service-design-fund-store
-    command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+    command: bash -c "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m flask run -p 8080 -h 0.0.0.0"
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:password@database:5432/fund_store
     ports: 
       - 3001:8080
+      - 5681:5678
     depends_on: 
     - database
     volumes: ['../funding-service-design-fund-store:/app']
   application-store:
     build: 
       context: ../funding-service-design-application-store
-    command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+    command: bash -c "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m flask run -p 8080 -h 0.0.0.0"
     environment:
       - FLASK_ENV=development
       - FUND_STORE_API_HOST=http://fund-store:8080
@@ -23,6 +24,7 @@ services:
       - NOTIFICATION_SERVICE_HOST=http://notification:8080
     ports: 
       - 3002:8080
+      - 5682:5678
     depends_on:
       - database
     volumes: ['../funding-service-design-application-store:/app']
@@ -42,8 +44,10 @@ services:
       build: 
         context: ../funding-service-design-authenticator
       volumes: ['../funding-service-design-authenticator:/app']
+      command: bash -c "python -m debugpy --listen 0.0.0.0:5678 -m flask run -p 8080 -h 0.0.0.0"
       ports: 
         - 3004:8080
+        - 5684:5678
       depends_on:
         - fund-store
         - account-store
@@ -87,6 +91,7 @@ services:
       context: ../funding-service-design-frontend
       dockerfile: Dockerfile
     volumes: ['../funding-service-design-frontend:/app']
+    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
     depends_on:
       - application-store
       - fund-store
