--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # COPY TO .env AND ASK TEAM MEMBER FOR VALUES
 GOV_NOTIFY_API_KEY=
-# OPTIONAL VALUES FOR TESTING FILE UPLOADS
+# FOR FILE UPLOAD, THESE ARE REQUIRED, YOU CAN USE THE DEV CREDENTIALS
+# TO GET SAID CREDENTIALS, RUN THE FOLLOWING:
+# cf login
+# cf t -s sandbox
+# cf service-keys form-uploads-dev
+# cf service-key form-uploads-dev local-testing
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
