--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,14 @@ services:
       - DATABASE_URL=postgresql://postgres:password@database:5432/application_store
       - ACCOUNT_STORE_API_HOST=http://account-store:8080
       - NOTIFICATION_SERVICE_HOST=http://notification:8080
+      # Uncomment to test AWS locally once credentials are set in .env
+      # You can grab these for dev with:
+      #   cf t -s sandbox
+      #   cf env funding-service-design-application-store-dev
+      # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:?err}
+      # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:?err}
+      # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME:?err}
+      # - AWS_REGION=${AWS_REGION:?err}
     ports: 
       - 3002:8080
       - 5682:5678
