--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ GOV_NOTIFY_API_KEY=
 # cf service-key form-uploads-dev local-testing
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
+AWS_REGION=
