--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,10 @@ services:
       # You can grab these for dev with:
       #   cf t -s sandbox
       #   cf env funding-service-design-application-store-dev
-      # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:?err}
-      # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:?err}
-      # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME:?err}
-      # - AWS_REGION=${AWS_REGION:?err}
+      # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
+      # - AWS_REGION=${AWS_REGION}
     ports: 
       - 3002:8080
       - 5682:5678
@@ -71,9 +71,9 @@ services:
         - APPLICANT_FRONTEND_HOST=http://localhost:3008
         - ASSESSMENT_FRONTEND_HOST=http://localhost:3010
         #  Uncomment to test Azure AD locally once credentials are set in .env
-        # - AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID:?err}
-        # - AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET:?err}
-        # - AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID:?err}
+        # - AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID}
+        # - AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET}
+        # - AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID}
   assessment-store:
       build: 
         context: ../funding-service-design-assessment-store
