BAU - Debug mode for containers (#33)
* adding debug to further apps

* BAU - docs and config for debugging in vs code

* debugpy included in requirements of apps

* typo

* added changes need for fund-db support

* adding db upgrade command to fund-store start

* debug config

* BAU: Update documentation for AWS keys (#36)

* BAU: Add AWS env variables as comments (#37)

* BAU: Comments for app store aws 2 (#38)

* BAU: Add AWS env variables as comments

* BAU: Fix invalid syntax

* add feedback url for form-runner

* BAU - docs and config for debugging in vs code

* debugpy included in requirements of apps

* all apps now depend on debugpy from requirements-dev

* typo

---------

Co-authored-by: Adam <adam.wallace@communities.gov.uk>
Co-authored-by: tferns <117724519+tferns@users.noreply.github.com>
Co-authored-by: Navya Ramuni <127315890+RamuniN@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,14 @@ services:
   account-store:
       build: 
         context: ../funding-service-design-account-store
-      command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+      command: ["sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
       environment:
         - FLASK_ENV=development
         - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
       volumes: ['../funding-service-design-account-store:/app']
       ports: 
         - 3003:8080
+        - 5683:5678
       depends_on:
         - database
   authenticator:
@@ -78,9 +79,10 @@ services:
       build: 
         context: ../funding-service-design-assessment-store
       volumes: ['../funding-service-design-assessment-store:/app']
-      command: bash -c "flask db upgrade && flask run -p 8080 -h 0.0.0.0"
+      command: ["sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
       ports: 
         - 3005:8080
+        - 5685:5678
       environment:
         - DATABASE_URL=postgresql://postgres:password@database:5432/assessment_store
         - APPLICATION_STORE_API_HOST=http://application-store:8080
@@ -90,8 +92,10 @@ services:
       build: 
         context: ../funding-service-design-notification
       volumes: ['../funding-service-design-notification:/app']
+      command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
       ports:
         - 3006:8080
+        - 5686:5678
       environment:
         GOV_NOTIFY_API_KEY: ${GOV_NOTIFY_API_KEY:?err}
   frontend:
@@ -99,7 +103,7 @@ services:
       context: ../funding-service-design-frontend
       dockerfile: Dockerfile
     volumes: ['../funding-service-design-frontend:/app']
-    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]   
+    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --host 0.0.0.0 --port 8080"]   
     depends_on:
       - application-store
       - fund-store
@@ -158,7 +162,7 @@ services:
     build: 
       context: ../funding-service-design-assessment
     volumes: ['../funding-service-design-assessment:/app']
-    command: ['flask', 'run', '--host', '0.0.0.0', '--port', '8080']
+    command: ["sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080"]  
     depends_on:
       - assessment-store
       - fund-store
@@ -178,3 +182,4 @@ services:
       # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
     ports: 
       - 3010:8080
+      - 5688:5678
