--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
         - NOTIFICATION_SERVICE_HOST=http://notification:8080
         - APPLICANT_FRONTEND_HOST=http://localhost:3008
         - ASSESSMENT_FRONTEND_HOST=http://localhost:3010
-        #  Uncomment to test Azure AD locally once credentials are set in .env
+        #  Uncomment to test Azure AD locally once credentials are set in .env - see README
         # - AZURE_AD_CLIENT_ID=${AZURE_AD_CLIENT_ID}
         # - AZURE_AD_CLIENT_SECRET=${AZURE_AD_CLIENT_SECRET}
         # - AZURE_AD_TENANT_ID=${AZURE_AD_TENANT_ID}
