adding authenticator as a dependency of assessment (#42)
* adding authenticator as a dependency of assessment

* readme/comments updates

* adding azure notes

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
-# COPY TO .env AND ASK TEAM MEMBER FOR VALUES
+# COPY TO .env then see README for details on how to obtain the values
 GOV_NOTIFY_API_KEY=
-# FOR FILE UPLOAD, THESE ARE REQUIRED, YOU CAN USE THE DEV CREDENTIALS
-# TO GET SAID CREDENTIALS, RUN THE FOLLOWING:
-# cf login
-# cf t -s sandbox
-# cf service-keys form-uploads-dev
-# cf service-key form-uploads-dev local-testing
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
 AWS_REGION=
+
+# AZURE_AD_CLIENT_ID=
+# AZURE_AD_CLIENT_SECRET=
+# AZURE_AD_TENANT_ID=
