--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       # Uncomment to test AWS locally once credentials are set in .env
       # You can grab these for dev with:
       #   cf t -s sandbox
-      #   cf env funding-service-design-application-store-dev
+      #   cf service-key form-uploads-dev local-testing
       # - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       # - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       # - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
